# obelisk

./: .dockerignore  .gitignore  Cargo.toml  README.md  test_env
backup/: locking.rs  persistence_lib.rs  rdatabase.rs  rpersistent_log.rs
common/: Cargo.toml
common/src/: client.rs  leasing.rs  lib.rs  metrics.rs  rescaler.rs  scaling_state.rs  storage.rs  time_service.rs  wrapper.rs
common/src/adaptation/: backend.rs  deploy.rs  frontend.rs  mod.rs
common/src/deployment/: container.rs  dynamo.rs  filesystem.rs  full_access_policy.json  lambda.rs  mod.rs  networking.rs  security.rs
deployment/: Cargo.toml
deployment/src/: Dockerfile  SystemCargo.toml  aws.rs  lib.rs  main.rs
deployment/src/codegen/: functional.rs  generic.rs  messaging.rs  mod.rs  rescaling.rs  wrapper.rs
functional/: Cargo.toml
functional/src/: client.rs  deployment.toml  echo.rs  essai.toml  invoker.rs  lib.rs  rescaler.rs
low_level_systems/: Cargo.toml
low_level_systems/src/: lib.rs  main.rs
low_level_systems/src/bpm/: journal.rs  manager.rs  mod.rs  page.rs  schema.sql  test.rs
low_level_systems/src/btree/: manager.rs  mod.rs  page.rs  test.rs  wal_provider.rs
low_level_systems/src/file_lease/: mod.rs  schema.sql
low_level_systems/src/wal/: manager.rs  mod.rs  partition.rs  replica.rs  schema.sql  test.rs
messaging/: Cargo.toml
messaging/src/: client.rs  deployment.toml  echo.rs  handler.rs  lib.rs  receiver.rs  rescaler.rs
microbench/: Cargo.toml
microbench/results/microactor_bench/: pre_High(4).csv  pre_Low.csv  pre_Medium.csv
microbench/results/microbench/: invoke.csv  message.csv  persist.csv  robustness_no_forecast_0.csv  robustness_no_forecast_1.csv  robustness_no_forecast_10.csv  robustness_no_forecast_2.csv  robustness_no_forecast_3.csv  robustness_no_forecast_4.csv  robustness_no_forecast_5.csv  robustness_no_forecast_6.csv  robustness_no_forecast_7.csv  robustness_no_forecast_8.csv  robustness_no_forecast_9.csv  robustness_with_forecast_0.csv  robustness_with_forecast_1.csv  robustness_with_forecast_2.csv  variable_invoke.csv  variable_message.csv  variable_persist.csv
microbench/results/microkv/: pre_low.csv  pre_medium.csv
microbench/results/py_kv_bench15/: pre_low_dynamodb.csv  pre_medium_firestore.csv
microbench/results/py_kv_bench15 copy/: post_low_dynamodb.csv  post_low_firestore.csv  pre_low_firestore.csv  pre_medium_dynamodb.csv
microbench/results/py_kv_bench30/: post_low_dynamodb.csv  post_low_firestore.csv  pre_low_dynamodb.csv  pre_low_firestore.csv  pre_medium_dynamodb.csv  pre_medium_firestore.csv
microbench/results/py_kv_bench30 copy/: pre_low_dynamodb.csv  pre_medium_dynamodb.csv  pre_medium_firestore.csv
microbench/src/: deployment.toml  lib.rs  micro.toml  micro_actor.rs  micro_function.rs  micro_kv.rs  runner.rs  runner.toml  sim_actor.rs
persistence/: Cargo.toml
persistence/src/: counter.rs  database.rs  deployment.toml  echo.rs  lib.rs  log_replica.rs  persistent_log.rs  rescaler.rs
scripts/: README.md
src/: lib.rs  main.rs
