[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json", "rustls-tls"], default-features = false }
async-trait = "*"
serde_json = "*"
serde = {version="*", features=["derive"]}
chrono = {version="*", features=["serde"]}
rsntp = "*"
uuid = { version = "*", features = ["v4"]}
aws-sdk-lambda = "*"
aws-sdk-dynamodb = "*"
aws-sdk-sqs = "*"
aws-sdk-ecs = "*"
aws-config = "*"
aws-smithy-types = "*"
aws-types = "*"
aws-sdk-ec2 = "*"
aws-sdk-ecr = "*"
aws-sdk-ecrpublic = "*"
aws-sdk-efs = "*"
aws-sdk-s3 = "*"
