[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json", "rustls-tls"], default-features = false }
async-trait = "*"
serde_json = "*"
bincode = "*"
base64 = "0.21"
serde = {version="*", features=["derive"]}
chrono = {version="*", features=["serde"]}
rsntp = "*"
uuid = { version = "*", features = ["v4"]}
rusqlite = { version = "*", features = ["bundled"] }
r2d2 = "*"
r2d2_sqlite = "*"
aws-sdk-lambda = "=1.20"
aws-sdk-dynamodb = "=1.21"
aws-sdk-ecs = "=1.20"
aws-sdk-iam = "=1.20"
aws-config = "=1.1.10"
aws-smithy-types = "*"
aws-smithy-runtime = "=1.2.1" # Broken in 1.3
aws-types = "=1.1.9"
aws-sdk-ec2 = "=1.32"
aws-sdk-ecr = "=1.19"
aws-sdk-ecrpublic = "=1.19"
aws-sdk-efs = "=1.19"
aws-sdk-s3 = "=1.22"
