[package]
name = "deployment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
quote = "*"
syn = "*"
proc-macro2 = "*"
tokio = { version = "*", features = ["full"] }
aws-sdk-iam = "1.20"
aws-sdk-ecr = "1.19"
aws-sdk-ecrpublic = "1.19"
aws-config = "1.1.10"
aws-types = "1.1.9"
serde = {version="*", features=["derive"]}
common = {path="../common"}
functional = {path="../functional"}
# messaging = {path="../messaging"}
persistence = {path="../persistence"}
microbench = {path="../microbench"}