[package]
name = "functional"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json", "rustls-tls"], default-features = false }
aws-sdk-lambda = "1.20"
aws-sdk-s3 = "1.22"
aws-config = "1.1.10"
aws-smithy-types = "*"
aws-types = "*"
async-trait = "*"
serde_json = "*"
bincode = "*"
base64 = "0.21"
rand = "*"
serde = {version="*", features=["derive"]}
chrono = {version="*", features=["serde"]}
common = {path="../common"}
uuid = { version = "*", features = ["v4"]}


[dev-dependencies]
ntest = "*"
