[package]
name = "low_level_systems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1.0", features=["derive"]}
serde_json = "1.0"
bincode="1.3"
rusqlite={version="0.31", features = ["bundled"]}
lru = "0.12"
r2d2_sqlite = "0.24"
r2d2 = "0.8"
crc32fast = "1.4"
log = "0.4"
libc = "0.2"
guardian = "1.1"
threadpool = "1.8"
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12.0"
ureq = "2.9"
std-semaphore = "0.1"

[dev-dependencies]
csv = "1.3"
rand = "0.8"
nix = { version = "0.28", features = ["process", "signal"] } 
env_logger = { version = "0.11", features = ["color"] }
