[package]
name = "messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json", "rustls-tls"], default-features = false }
aws-sdk-lambda = "*"
aws-sdk-sqs = "*"
aws-sdk-s3 = "*"
aws-sdk-ecs = "*"
aws-config = "*"
aws-smithy-types = "*"
aws-types = "*"
async-trait = "*"
serde_json = "*"
bincode = "*"
chrono = "*"
uuid = { version = "*", features = ["v4"]}
serde = {version="*", features=["derive"]}
persistence = {path="../persistence"}
common = {path="../common"}
