[package]
name = "messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json", "rustls-tls"], default-features = false }
aws-sdk-lambda = "1.20"
aws-sdk-s3 = "1.22"
aws-sdk-ecs = "1.20"
aws-config = "1.1.10"
aws-smithy-types = "*"
aws-types = "1.1.9"
async-trait = "*"
serde_json = "*"
bincode = "*"
chrono = "*"
rand = "*"
uuid = { version = "*", features = ["v4"]}
serde = {version="*", features=["derive"]}
persistence = {path="../persistence"}
common = {path="../common"}
