[package]
name = "microbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
serde_json = "*"
serde = {version="*", features=["derive"]}
persistence = {path="../persistence"}
common = {path="../common"}
functional = {path="../functional"}
low_level_systems = {path="../low_level_systems"}
async-trait = "*"
chrono = {version="*", features=["serde"]}
bincode = "*"


[dev-dependencies]
csv = "*"
rand = "*"
zipf = "7.0.1"